2006-02-19  Marcus Meissner  <marcus@jet.franken.de>

	* Regular expression support added for:

	  usb:		(currently supported: usb:XXX,YYY,
			 can get easily more)

	  disk:		(disk:/full/path/)
	  ptpip:	(ptpip:ipnr:port)

2006-02-17  Marcus Meissner  <marcus@jet.franken.de>

	* libgphoto2_port/gphoto2-port-info-list.c: Fixed
	  various problems in regular expression based ports
	  handling.

2006-02-16  Marcus Meissner  <marcus@jet.franken.de>
	
	* ptpip/: New directory for PTP/IP support.
	* configure.in: added ptpip directory
	  autodetect mDNSresponder (UNIX version of Bonjour)

2006-01-04  Hubert Figuiere  <hub@figuiere.net>

	* configure.in: buumped .so version. Bumped 
	  package version.

2005-08-17  Marcus Meissner  <marcus@jet.franken.de>

	* usb/libusb.c: Recurse into the interfaces to see
	  HID devices and similar so we can skip them.

	  This avoids unnecessary listing of some
	  non camera devices and usb:XXX,YYY confusion.

2005-08-14  Marcus Meissner  <marcus@jet.franken.de>

	* configure.in: Use "disk" unconditional. 
	  When we detect HAL , define HAVE_HAL.

	* disk/disk.c: Read /etc/fstab and /etc/mtab and look
	  for digital camera mounts.

2005-06-12  Hubert Figuiere  <hfiguiere@teaser.fr>

	* libgphoto2_port/gphoto2-port.h: new disk settings struct.

	* libgphoto2_port/gphoto2-port.c (gp_port_set_info): copy
	disk port settings

	* libgphoto2_port/gphoto2-port-result.[ch]: 
	added GP_HAL_ERROR

	* disk/Makefile.am: added HAL flags

	* disk/disk.c (gp_port_library_list): list mounted filesystems 
	using libhal.

	* configure.in (HAL_CFLAGS): detect libhal

2005-06-11  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* libgphoto2_port/Makefile.am: link libgphoto2_port 
	  with explicit symbol list

2005-06-11  Hubert Figuiere  <hfiguiere@teaser.fr>

	* disk/*:
	* configure.in: added disk/ subdir
	* libgphoto2_port/gphoto2-port-info-list.h: added GP_PORT_DISK.

2005-06-08  Theodore Kilgota  <kilgota@auburn.edu>
